raw-k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: a
---
apiVersion: v1
kind: Namespace
metadata: 
  name: b
