raw-k8s/services.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: app-service
    namespace: a
  spec:
    selector:
      app: app-a
    ports:
    - protocol: TCP
      port: 80
      targetPort: 80
    type: ClusterIP
---
  apiVersion: v1
  kind: Service
  metadata:
    name: app-service
    namespace: b
  spec:
    selector:
      app: app-b
    ports:
    - protocol: TCP
      port: 80
      targetPort: 80
    type: ClusterIP
